--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-body {
+body, html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
   }
 /* menu navigasi*/
   .topnav {
@@ -52,5 +53,43 @@ body {
       display: block;
       text-align: left;
     }
-   /* akhir menu navigasi*/ 
+  
+  }
+   /* akhir menu navigasi*/  
+   
+  /*
+      Hero section
+   */
+   .hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/gambarHero1.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  
+  .hero-text button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 10px 25px;
+    color: black;
+    background-color: #ddd;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .hero-text button:hover {
+    background-color: #555;
+    color: white;
   }
